# nuwave-rov

./: .gitignore  README.md  dockerfile  joystick_config.yaml  master_setup.sh  requirements.txt  ros_entrypoint.sh  setup_terminals_all.sh  setup_terminals_bottomside.sh  setup_terminals_topside.sh
adc_pkg/: package.xml  setup.cfg  setup.py
full_system_launch/: package.xml  setup.cfg  setup.py
gui/: index.html  package-lock.json  package.json  tsconfig.json
gui/src/: App.css  App.tsx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
invasiveCrabRecognition/: crab_recog_KNN.py  crab_recog_makeModel.ipynb  create_image_dataset.py  create_image_dataset_makeData2.py  makeImages.ipynb  scaleAndRotateCrab_makeData1.ipynb  underwaterTransform_makeData3.ipynb
invasiveCrabRecognition/.ipynb_checkpoints/: makeImages-checkpoint.ipynb
log/: latest_build
rosbag2_2026_03_26-00_38_21/: rosbag2_2026_03_26-00_38_21_0.db3
rosbag2_2026_03_26-00_50_47/: rosbag2_2026_03_26-00_50_47_0.db3
src/: hi-mia.txt
src/adc_pkg/: README.md  package.xml  setup.cfg  setup.py
src/arduino_thruster_pkg/: package.xml  setup.cfg  setup.py
src/arm_commander_pkg/: README.md  package.xml  setup.cfg  setup.py
src/arm_controller/: package.xml  setup.cfg  (+1 more)
src/camera_pkg/: package.xml  setup.cfg  setup.py
src/camera_pkg/camera_pkg/: crab_recognition.py  mock_cameras.py  openCVStreaming.py  testCVStreaming.py
src/camera_pkg/config/: gscam_params.yaml
src/camera_pkg/launch/: gscam_launch.py  multi_camera_launch.launch.py  multi_camera_launch.py
web_gui/: package.xml
(+135 files in other folders)
